--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>It is first merge conflict</h1>
     <h2>it is version 1</h2>
+    <h1>ashahsgaj</h1>
 </body>
 </html>
