--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>It is first merge conflict</h1>
-    <h2>it is version 1</h2>
-    <h1>ashahsgaj</h1>
+    <h1>123345688t</h1>
+    <h2>i</h2>
+    <h1>aj</h1>
+    <b>sadhafd</b>
 </body>
 </html>
